web/css/win.css
/* ... */
.resourceNameAlertLeft {
  width:49%;
  text-align:left;
  padding:3px;
  border-bottom:1px solid #D5D8DE;
}

.alertType {
padding: 3px;
border-bottom: 1px solid #D5D8DE;
text-align: left;
width:20%;
}
.resourceTypeName {
  width:20%;
  padding-top:3px;
  padding-bottom:3px;
  padding-left:3px;
  border-bottom:1px solid #D5D8DE;
}

.throughput {
  width:10%;
  padding-top:3px;
  padding-bottom:3px;
  border-bottom:1px solid #D5D8DE;
  text-align:center;
}

.metricName {
  width:20%;
  padding-top:3px;
  padding-bottom:3px;
  padding-right:3px;
  border-bottom:1px solid #D5D8DE;
  text-align:center;
  white-space:nowrap;
}

.availResourceStatus {
padding-top:3px;
padding-bottom:3px;
border-bottom:1px solid #D5D8DE;
white-space:  nowrap;
}

#rowOrder {
  list-style-type:none;
  margin:0;
  margin-right: 5px;
  padding:0;
}

#rowOrder li {
  font:13px Verdana;
  margin:0;
  padding:4px;
   list-style-type:none;
   list-style: none; 
   width: 100%;
   border-bottom:1px solid gray;
}
   
#viewEscalationUL {
  margin:0;
  padding:0;
  width:100%;
}

#viewEscalationUL li {
  font:13px Verdana;
  margin:0px;
  padding:0px;
  list-style: none;
  width: 100%;
  border-bottom:1px solid gray;
  background-color:#F2F4F7;
}

#addEscalationUL {
  margin:0;
  margin-right: 0px;
  padding:0;
  width:100%;
}

#addEscalationUL .escTbl {
 padding-left:10px;
    }

#addEscalationUL li {
  font:13px Verdana;
  margin:0px;
  padding:0px;
  list-style: none;
  width: 100%;
  border-bottom:1px solid gray;
  background-color:#F2F4F7;
}

.escListArrow {
 display:none;
 padding: 3px; border-bottom: solid #D5D8DE; border-width: 1px;
}

.selectedHighlight {
padding: 3px;
border-bottom: solid #D5D8DE;
border-width: 1px;
background-color: #dbe3f5
}
.escTbl {
  width:100%;
  margin-top:10px;
    padding-bottom:0px;
}

#viewEscalationUL .escTbl {
  width:100%;
  margin-top:0px;
  padding-left:10px;
}

.remove {
  margin-top:5px;
  margin-right:5px;
  margin-left:5px;
}

.escInput {
 font:10px Verdana;
 margin:0px;
 padding:0px;
 text-align:right;
}

.lineitem {
}

.escConfirmation {
 padding:10px;
 width:200px;
 margin:auto;
 border:1px solid gray;
 background-color:#D5D8DE;
}

.td2 {
 padding:5px 0px 10px 5px;
 width:10%;
}

.td3 {
 width:10%;
 padding-right:5px;
 padding-top:5px;
}

.waitTd {
}

.portletLRBotBorder {
 border-left:1px solid #D5D8DE;
 border-right:1px solid #D5D8DE;
 border-bottom:1px solid #D5D8DE;
}

.portletLRBorder {
border-left:1px solid #D5D8DE;
 border-right:1px solid #D5D8DE;
}


#narrowList_false .BlockTitle{
 background-color:#38538b;
}

#narrowList_true .BlockTitle{
 background-color:#868787;
 color: #ffffff;
 font-weight: bold;
}

#narrowList_true .BlockContent{
 background-color:#eaedf2;
}

.mainNavText {
 font-family: Helvetica, sans-serif;
 font-size: 11px;
 color: #062b7a;
 font-weight: bold;
 white-space:nowrap;
}

.mainNavText a, .mainNavText td a{
 color: #062b7a;
 text-decoration:none;
}

#displaySelAction {
 border: 1px dotted #D5D8DE;
 width:35%;
 margin-left:5px;
}

#displaySelAction .BlockTitle{
 background-color:#868787;
 color: #ffffff;
 font-weight: bold;
}

.emailDiv {
 text-align:left;
}

.modifiedDate {
 padding:3px;
 background-color: #E5E5E5;
 text-align:right;
}

.escTbl .BlockTitle{
 font-weight: bold;
 background-color: #f2f4f7;
 color:#333333;
}

.handle {
 border-left: 1px solid #D5D8DE;
 border-top: 1px solid #D5D8DE;
 border-right:1px solid #aeb0b5;
 border-bottom:1px solid #aeb0b5;
 background-color:#e6e6e6;
 margin-right:10px;
}

